# FloatInk

./: LICENSE  README.md  package-lock.json  package.json
src/: index.html  renderer.js  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/scripts/: make_tray_icon.py
src-tauri/src/: main.rs  metal_overlay.rs
