[package]
name = "floatink"
version = "1.0.0"
description = "Screen annotation tool for macOS"
authors = ["chris"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["macos-private-api"] }
tauri-plugin-global-shortcut = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[target.'cfg(target_os = "macos")'.dependencies]
objc2 = "0.6.4"
objc2-app-kit = "0.3.2"
objc2-core-graphics = "0.3.2"
objc2-quartz-core = "0.3.2"
objc2-metal = "0.3.2"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
